se agrega layout de finalistas

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
           <div class="formulario">
             <form class="" action="send_form_email.php" method="post">
               <div class="nombre">
-                <label for="nombre">Nombre
-                  <input type="text" name="nombre" value="">
-                </label>
+                <label for="nombre">Nombre</label>
+                <input type="text" name="nombre" value="">
               </div>
               <div class="caja">
                 <div class="equipo">
@@ -34,7 +33,7 @@
               </div>
               </div>
 
-            <input class="enviar"type="submit" value="Submit">
+            <input class="enviar botton"type="submit" value="Enviar">
             </form>
           </div>
         </div>
