--- a/index.html
+++ b/index.html
@@ -7,10 +7,33 @@
     <title>Mundial Rusia 2018</title>
   </head>
   <body>
+    <header>
+      <div class="header">
+        <div class="logo">
+          <img src="images/copa.png" width="100px" height="auto" alt="copa.png">
+          <h1>MUNDIAL RUSIA 2018</h1>
+        </div>
+        <nav>
+          <ul>
+            Partido
+          </ul>
+          <ul>
+            Programación
+          </ul>
+          <ul>
+            Ranking
+          </ul>
+        </nav>
+
+      </div>
+    </header>
+    <section class="portada">
+      <span>TORNEO MUNDIALISTA <br></span>
+      <span>Famila Diaz Gonzalez</span>
+    </section>
     <section class="marcador">  <!-- formulario de marcadores -->
       <div class="transparencia">
         <div class="contenedor">
-          <h1>MUNDIAL RUSIA 2018</h1>
           <div class="formulario">
             <form class="" action="send_form_email.php" method="post">
               <div class="nombre">
