--- a/finales.html
+++ b/finales.html
@@ -5,29 +5,31 @@
     <link rel="stylesheet" href="CSS/master.css">
     <link href="https://fonts.googleapis.com/css?family=Parisienne|Russo+One|Ubuntu:400,400i,500,700" rel="stylesheet">
     <title>Mundial Rusia 2018</title>
+    
   </head>
   <body>
     <header>
       <div class="header">
         <div class="logo">
-          <img src="images/copa.png" width="100px" height="auto" alt="copa.png">
-          <h1>MUNDIAL RUSIA 2018</h1>
+          <a href="#portada"><img src="images/copa.png" width="100px" height="auto" alt="copa.png">
+          <h1>MUNDIAL RUSIA 2018</h1></a>
+
         </div>
         <nav>
           <ul>
-            Partido
+            <a href="#match">Partido</a>
           </ul>
           <ul>
-            Programación
+            <a href="#programacion">Programación</a>
           </ul>
           <ul>
-            Ranking
+            <a href="#ranking">Ranking</a>
           </ul>
         </nav>
 
       </div>
     </header>
-    <section class="portada">
+    <section class="portada" id="portada">
       <div class="transparencia">
         <div class="titulo">
           <span class="titulo-1">TORNEO MUNDIALISTA</span>
@@ -138,7 +140,7 @@
         </div>
       </div>
     </section>
-    <section class="match">  <!-- formulario de matach -->
+    <section class="match" id="match">  <!-- formulario de matach -->
       <div class="transparencia">
         <div class="contenedor">
           <div class="formulario">
@@ -169,7 +171,7 @@
         </div>
       </div>
     </section>
-    <section class="programacion">
+    <section class="programacion" id="programacion">
       <div class="transparencia">
         <h2>PROGRAMACIÓN</h2>
         <div class="partidos">
@@ -731,7 +733,7 @@
         </div>
       </div>
     </section>
-    <section class="ranking">
+    <section class="ranking" id="ranking">
       <div class="transparencia">
         <div class="contenedor">
           <h2>RANKING</h2>
