--- a/finales.html
+++ b/finales.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="CSS/master.css">
     <link href="https://fonts.googleapis.com/css?family=Parisienne|Russo+One|Ubuntu:400,400i,500,700" rel="stylesheet">
     <title>Mundial Rusia 2018</title>
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
   </head>
   <body>
     <header>
@@ -240,11 +240,11 @@
                 <th>Fecha</th>
                 <th>Hora</th>
                 <th>Grupo</th>
-                <th>Marcador</th>
+                <th></th>
                 <th>Equipo</th>
                 <th>Vs</th>
                 <th>Equipo</th>
-                <th>Marcador</th>
+                <th></th>
               </thead>
               <tbody>
                 <td>14-jun</td>
