--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="CSS/master.css">
-    <link href="https://fonts.googleapis.com/css?family=Parisienne|Russo+One|Ubuntu:400,400i,500,700" rel="stylesheet">
     <title>Mundial Rusia 2018</title>
+    <link rel="icon" type="image/x-icon" href="images/copa.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
   </head>
   <body>
@@ -1198,14 +1198,14 @@
               </div>
               <div class="caja">
                 <div class="equipo">
-                  <img src="images/rusia.png" alt="">
+                  <img class="img-izq" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/rusia.png" alt="">
                   <label for="equipo_1"> Rusia
                     <input type="text" name="equipo_1" value="">
                   </label>
                 </div>
                 <p>VS</p>
               <div class="equipo">
-                <img src="images/arabia-saudita.png" alt="">
+                <img class="img-der" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/arabia-saudita.png" alt="">
                 <label for="equipo_2"> A. Saudita
                   <input type="text" name="equipo_2" value="">
                 </label>
@@ -1224,59 +1224,59 @@
         <div class="partidos">
           <div class="grupos A">
             <h3>Grupo A</h3>
-            <span><img src="images/rusia.png" width="50px" height="35px" alt=""> Rusia</br></span>
-            <span><img src="images/arabia-saudita.png" width="50px" height="35px" alt=""> A. Saudita</br></span>
-            <span><img src="images/egipto.png" width="50px" height="35px" alt=""> Egipto</br></span>
-            <span><img src="images/uruguay.png" width="50px" height="35px" alt=""> Uruguay</br></span>
+            <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/rusia.png" width="50px" height="35px" alt=""> Rusia</br></span>
+            <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/arabia-saudita.png" width="50px" height="35px" alt=""> A. Saudita</br></span>
+            <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/egipto.png" width="50px" height="35px" alt=""> Egipto</br></span>
+            <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/uruguay.png" width="50px" height="35px" alt=""> Uruguay</br></span>
           </div>
           <div class="grupos B">
             <h3>Grupo B</h3>
-            <span><img src="images/portugal.png" width="50px" height="35px" alt=""> Portugal</br></span>
-            <span><img src="images/españa.png" width="50px" height="35px" alt=""> España</br></span>
-            <span><img src="images/marruecos.png" width="50px" height="35px" alt=""> Marruecos</br></span>
-            <span><img src="images/iran.png" width="50px" height="35px" alt=""> Irán</br></span>
+            <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/portugal.png" width="50px" height="35px" alt=""> Portugal</br></span>
+            <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/españa.png" width="50px" height="35px" alt=""> España</br></span>
+            <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/marruecos.png" width="50px" height="35px" alt=""> Marruecos</br></span>
+            <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/iran.png" width="50px" height="35px" alt=""> Irán</br></span>
           </div>
           <div class="grupos C">
             <h3>Grupo C</h3>
-            <span><img src="images/francia.png" width="50px" height="35px" alt=""> Francia</br></span>
-            <span><img src="images/australia.png" width="50px" height="35px" alt=""> Australia</br></span>
-            <span><img src="images/peru.png" width="50px" height="35px" alt=""> Perú</br></span>
-            <span><img src="images/dinamarca.png" width="50px" height="35px" alt=""> Dinamarca</br></span>
+            <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/francia.png" width="50px" height="35px" alt=""> Francia</br></span>
+            <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/australia.png" width="50px" height="35px" alt=""> Australia</br></span>
+            <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/peru.png" width="50px" height="35px" alt=""> Perú</br></span>
+            <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/dinamarca.png" width="50px" height="35px" alt=""> Dinamarca</br></span>
           </div>
           <div class="grupos D">
             <h3>Grupo D</h3>
-            <span><img src="images/argentina.png" width="50px" height="35px" alt=""> Argentina</br></span>
-            <span><img src="images/islandia.png" width="50px" height="35px" alt=""> Islandia</br></span>
-            <span><img src="images/croacia.png" width="50px" height="35px" alt=""> Croacia</br></span>
-            <span><img src="images/nigeria.png" width="50px" height="35px" alt=""> Nigeria</br></span>
+            <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/argentina.png" width="50px" height="35px" alt=""> Argentina</br></span>
+            <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/islandia.png" width="50px" height="35px" alt=""> Islandia</br></span>
+            <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/croacia.png" width="50px" height="35px" alt=""> Croacia</br></span>
+            <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/nigeria.png" width="50px" height="35px" alt=""> Nigeria</br></span>
           </div>
           <div class="grupos E">
             <h3>Grupo E</h3>
-            <span><img src="images/brasil.png" width="50px" height="35px" alt=""> Brasil</br></span>
-            <span><img src="images/suiza.png" width="50px" height="35px" alt=""> Suiza</br></span>
-            <span><img src="images/costa-rica.png" width="50px" height="35px" alt=""> Costa Rica</br></span>
-            <span><img src="images/serbia.png" width="50px" height="35px" alt=""> Serbia</br></span>
+            <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/brasil.png" width="50px" height="35px" alt=""> Brasil</br></span>
+            <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/suiza.png" width="50px" height="35px" alt=""> Suiza</br></span>
+            <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/costa-rica.png" width="50px" height="35px" alt=""> Costa Rica</br></span>
+            <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/serbia.png" width="50px" height="35px" alt=""> Serbia</br></span>
           </div>
           <div class="grupos F">
             <h3>Grupo F</h3>
-            <span><img src="images/alemania.png" width="50px" height="35px" alt=""> Alemania</br></span>
-            <span><img src="images/mexico.png" width="50px" height="35px" alt=""> México</br></span>
-            <span><img src="images/suecia.png" width="50px" height="35px" alt=""> Suecia</br></span>
-            <span><img src="images/corea-sur.png" width="50px" height="35px" alt=""> C. del Sur</br></span>
+            <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/alemania.png" width="50px" height="35px" alt=""> Alemania</br></span>
+            <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/mexico.png" width="50px" height="35px" alt=""> México</br></span>
+            <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/suecia.png" width="50px" height="35px" alt=""> Suecia</br></span>
+            <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/corea-sur.png" width="50px" height="35px" alt=""> C. del Sur</br></span>
           </div>
           <div class="grupos G">
             <h3>Grupo G</h3>
-              <span><img src="images/belgica.png" width="50px" height="35px" alt=""> Bélgica</br></span>
-              <span><img src="images/panama.png" width="50px" height="35px" alt=""> Panamá</br></span>
-              <span><img src="images/tunez.png" width="50px" height="35px" alt=""> Tunez</br></span>
-              <span><img src="images/inglaterra.png" width="50px" height="35px" alt=""> Inglaterra</br></span>
+              <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/belgica.png" width="50px" height="35px" alt=""> Bélgica</br></span>
+              <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/panama.png" width="50px" height="35px" alt=""> Panamá</br></span>
+              <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/tunez.png" width="50px" height="35px" alt=""> Tunez</br></span>
+              <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/inglaterra.png" width="50px" height="35px" alt=""> Inglaterra</br></span>
           </div>
           <div class="grupos H">
             <h3>Grupo H</h3>
-            <span><img src="images/polonia.png" width="50px" height="35px" alt=""> Polonia</br></span>
-            <span><img src="images/senegal.png" width="50px" height="35px" alt=""> Senegal</br></span>
-            <span><img src="images/colombia.png" width="50px" height="35px" alt=""> Colombia</br></span>
-            <span><img src="images/japon.png" width="50px" height="35px" alt=""> Japón</br></span>
+            <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/polonia.png" width="50px" height="35px" alt=""> Polonia</br></span>
+            <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/senegal.png" width="50px" height="35px" alt=""> Senegal</br></span>
+            <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/colombia.png" width="50px" height="35px" alt=""> Colombia</br></span>
+            <span><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/japon.png" width="50px" height="35px" alt=""> Japón</br></span>
           </div>
           </div>
         <div class="calendario contenedor">
@@ -1780,7 +1780,7 @@
         </div>
       </div>
     </section>
-    <section class="ranking" id="ranking">
+    <section class="ranking" id="ranking" data-src="images/soccer-ball.jpg">
       <div class="transparencia">
         <div class="contenedor">
           <h2>RANKING</h2>
@@ -1802,7 +1802,9 @@
     <footer>
       <span>Manuel-Diaz</span>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/blazy/1.8.2/blazy.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
+
     <script type="text/javascript">
     var consulta = window.matchMedia("(max-width:500px)");
    consulta.addListener(mediaQuery);
@@ -1838,6 +1840,22 @@
     }
 
   mediaQuery();
+  var bLazy = new Blazy({
+      selector: "img"
+  });
+
+  var gestos = new Hammer($body);
+  gestos.on('swipeleft', closeMenu);
+  gestos.on('swiperight', openMenu);
+</script>
+
+<script type="text/javascript" async defer>
+	WebFontConfig={google:{families:['Parisienne|Russo+One|Ubuntu:400,400i,500,700']}};
+	(function(){var wf=document.createElement('script');
+	wf.src=('https:'==document.location.protocol ? 'https' : 'http') + '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+	wf.type='text/javascript';wf.async='true';
+	var s=document.getElementsByTagName('script')[0];
+	s.parentNode.insertBefore(wf,s);})();
 </script>
   </body>
 </html>
