--- a/index_1.html
+++ b/index_1.html
@@ -40,87 +40,6 @@
       </div>
 
     </section>
-
-    <section class="match" id="match">  <!-- formulario de matach -->
-      <div class="transparencia">
-        <div class="contenedor">
-          <h2>PARTIDOS DOMINGO 17 DE JUNIO</h2>
-          <div class="formulario">
-            <form class="" action="send_form_email_x2.php" method="post">
-              <div class="nombre">
-                <label for="nombre">Nombre</label>
-                <input type="text" name="nombre" value="">
-              </div>
-              <div class="caja">
-                <div class="equipo">
-                  <img class="img-izq" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/costa-rica.png" alt="">
-                  <label for="costarica">   Costa Rica
-                    <input type="text" name="costarica" value="">
-                  </label>
-                </div>
-                <p>VS</p>
-              <div class="equipo">
-                <img class="img-der" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/serbia.png" alt="">
-                <label for="serbia"> Serbia
-                  <input type="text" name="serbia" value="">
-                </label>
-              </div>
-              </div>
-              <div class="caja">
-                <div class="equipo">
-                  <img class="img-izq" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/brasil.png" alt="">
-                  <label for="brasil"> Brasil
-                    <input type="text" name="brasil" value="">
-                  </label>
-                </div>
-                <p>VS</p>
-              <div class="equipo">
-                <img class="img-der" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/suiza.png" alt="">
-                <label for="suiza">Suiza <br>
-                  <input type="text" name="suiza" value="">
-                </label>
-              </div>
-              </div>
-              <div class="caja">
-                <div class="equipo">
-                  <img class="img-izq" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/alemania.png" alt="">
-                  <label for="alemania"> Alemania
-                    <input type="text" name="alemania" value="">
-                  </label>
-                </div>
-                <p>VS</p>
-              <div class="equipo">
-                <img class="img-der" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/mexico.png" alt="">
-                <label for="mexico"> Mexico
-                  <input type="text" name="mexico" value="">
-                </label>
-              </div>
-              </div>
-              <!-- <div class="caja">
-                <div class="equipo">
-                  <img class="img-izq" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/croacia.png" alt="">
-                  <label for="croacia"> Croacia
-                    <input type="text" name="croacia" value="">
-                  </label>
-                </div>
-                <p>VS</p>
-              <div class="equipo">
-                <img class="img-der" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/nigeria.png" alt="">
-                <label for="nigeria"> Nigeria
-                  <input type="text" name="nigeria" value="">
-                </label>
-              </div>
-              </div> -->
-            <input class="enviar-2 botton"type="submit" value="Enviar">
-            </form>
-          </div>
-
-
-
-        </div>
-      </div>
-    </section>
-
     <section class="marcador">  <!-- formulario de marcadores -->
       <div class="transparencia">
         <div class="">
@@ -1272,6 +1191,87 @@
         </div>
       </div>
     </section>
+    <section class="match" id="match">  <!-- formulario de matach -->
+      <div class="transparencia">
+        <div class="contenedor">
+          <div class="formulario">
+            <form class="" action="send_form_email.php" method="post">
+              <div class="nombre">
+                <label for="nombre">Nombre</label>
+                <input type="text" name="nombre" value="">
+              </div>
+              <div class="caja">
+                <div class="equipo">
+                  <img class="img-izq" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/egipto.png" alt="">
+                  <label for="equipo_1">   Egipto
+                    <input type="text" name="equipo_1" value="">
+                  </label>
+                </div>
+                <p>VS</p>
+              <div class="equipo">
+                <img class="img-der" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/uruguay.png" alt="">
+                <label for="equipo_2"> Uruguay
+                  <input type="text" name="equipo_2" value="">
+                </label>
+              </div>
+              </div>
+
+            <input class="enviar-2 botton"type="submit" value="Enviar">
+            </form>
+          </div>
+          <div class="formulario">
+            <form class="" action="send_form_email_2.php" method="post">
+              <div class="nombre">
+                <label for="nombre">Nombre</label>
+                <input type="text" name="nombre" value="">
+              </div>
+              <div class="caja">
+                <div class="equipo">
+                  <img class="img-izq" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/marruecos.png" alt="">
+                  <label for="equipo_1"> Marruecos
+                    <input type="text" name="equipo_1" value="">
+                  </label>
+                </div>
+                <p>VS</p>
+              <div class="equipo">
+                <img class="img-der" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/iran.png" alt="">
+                <label for="equipo_2">Irán <br>
+                  <input type="text" name="equipo_2" value="">
+                </label>
+              </div>
+              </div>
+
+            <input class="enviar-2 botton"type="submit" value="Enviar">
+            </form>
+          </div>
+          <div class="formulario">
+            <form class="" action="send_form_email_3.php" method="post">
+              <div class="nombre">
+                <label for="nombre">Nombre</label>
+                <input type="text" name="nombre" value="">
+              </div>
+              <div class="caja">
+                <div class="equipo">
+                  <img class="img-izq" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/portugal.png" alt="">
+                  <label for="equipo_1"> Portugal
+                    <input type="text" name="equipo_1" value="">
+                  </label>
+                </div>
+                <p>VS</p>
+              <div class="equipo">
+                <img class="img-der" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/españa.png" alt="">
+                <label for="equipo_2"> España
+                  <input type="text" name="equipo_2" value="">
+                </label>
+              </div>
+              </div>
+
+            <input class="enviar-2 botton"type="submit" value="Enviar">
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="ranking" id="ranking" data-src="images/soccer-ball.jpg">
       <div class="transparencia">
         <div class="contenedor">
@@ -1283,63 +1283,43 @@
               <th>Puntos</th>
             </thead>
             <tbody>
-              <td>1</td>
-              <td>MILENA PARRADO</td>
-              <td>14</td>
-            </tbody>
-            <tbody>
-              <td>2</td>
-              <td>ALLISON RODRIGUEZ MOLINA</td>
-              <td>11</td>
-            </tbody>
-            <tbody>
-              <td>3</td>
-              <td>RAFAEL GONZALEZ</td>
-              <td>11</td>
-            </tbody>
-            <tbody>
-              <td>4</td>
+              <td>...</td>
               <td>RAFAEL ANTONIO DIAZ</td>
-              <td>9</td>
+              <td>3</td>
             </tbody>
             <tbody>
-              <td>5</td>
-              <td>MANUEL IGNACIO DIAZ</td>
-              <td>9</td>
-            </tbody>
-            <tbody>
-              <td>6</td>
-              <td>SAMUEL DORADO</td>
-              <td>8</td>
-            </tbody>
-            <tbody>
-              <td>7</td>
+              <td>...</td>
               <td>CARLINA GONZALEZ DE DIAZ</td>
-              <td>6</td>
+              <td>3</td>
             </tbody>
             <tbody>
-              <td>8</td>
-              <td>MANUEL DAVID DIAZ</td>
-              <td>6</td>
+              <td>...</td>
+              <td>ALLISON RODRIGUEZ MOLINA</td>
+              <td>3</td>
             </tbody>
             <tbody>
-              <td>9</td>
-              <td>KAREN JOHANA DIAZ</td>
-              <td>6</td>
-            </tbody>
-            <tbody>
-              <td>10</td>
+              <td>...</td>
               <td>CATALINA DIAZ RODRIGUEZ</td>
               <td>3</td>
             </tbody>
             <tbody>
-              <td>11</td>
-              <td>SARA DORADO</td>
+              <td>...</td>
+              <td>MILENA PARRADO</td>
               <td>3</td>
             </tbody>
             <tbody>
-              <td>12</td>
-              <td>ADRIANA PARRADO</td>
+              <td>...</td>
+              <td>MANUEL IGNACIO DIAZ</td>
+              <td>3</td>
+            </tbody>
+            <tbody>
+              <td>...</td>
+              <td>KAREN JOHANNA DIAZ</td>
+              <td>3</td>
+            </tbody>
+            <tbody>
+              <td>...</td>
+              <td>MANUEL DAVID DIAZ</td>
               <td>3</td>
             </tbody>
           </table>
@@ -1435,61 +1415,61 @@
                 <td>15-jun</td>
                 <td>7:00 a.m.</td>
                 <td>A</td>
-                <td>0</td>
+                <td></td>
                 <td>EGIPTO</td>
                 <td>vs</td>
                 <td>URUGAY</td>
-                <td>1</td>
+                <td></td>
               </tbody>
               <tbody>
                 <td>15-jun</td>
                 <td>10:00 a.m.</td>
                 <td>B</td>
-                <td>0</td>
+                <td></td>
                 <td>MARRUECOS</td>
                 <td>vs</td>
                 <td>IRAN</td>
-                <td>1</td>
+                <td></td>
               </tbody>
               <tbody>
                 <td>15-jun</td>
                 <td>1:00 P.m.</td>
                 <td>B</td>
-                <td>3</td>
+                <td></td>
                 <td>PORTUGAL</td>
                 <td>vs</td>
                 <td>ESPAÑA</td>
-                <td>3</td>
+                <td></td>
               </tbody>
               <tbody>
                 <td>16-jun</td>
                 <td>5:00 a.m.</td>
                 <td>C</td>
-                <td>2</td>
+                <td></td>
                 <td>FRANCIA</td>
                 <td>vs</td>
                 <td>AUSTRALIA</td>
-                <td>1</td>
+                <td></td>
               </tbody>
               <tbody>
                 <td>16-jun</td>
                 <td>5:00 a.m.</td>
                 <td>C</td>
-                <td>0</td>
+                <td></td>
                 <td>PERÚ</td>
                 <td>vs</td>
                 <td>DINAMARCA</td>
-                <td>1</td>
+                <td></td>
               </tbody>
               <tbody>
                 <td>16-jun</td>
                 <td>8:00 a.m.</td>
                 <td>D</td>
-                <td>1</td>
+                <td></td>
                 <td>ARGENTINA</td>
                 <td>vs</td>
                 <td>ISLANDIA</td>
-                <td>1</td>
+                <td></td>
               </tbody>
               <tbody>
                 <td>16-jun</td>
