actualizado partidos 19 de junio

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section class="match" id="match">  <!-- formulario de matach -->
       <div class="transparencia">
         <div class="contenedor">
-          <h2>PARTIDOS DOMINGO 17 DE JUNIO</h2>
+          <h2>PARTIDOS MARTES 19 DE JUNIO</h2>
           <div class="formulario">
             <form class="" action="send_form_email_x2.php" method="post">
               <div class="nombre">
@@ -53,46 +53,47 @@
               </div>
               <div class="caja">
                 <div class="equipo">
-                  <img class="img-izq" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/costa-rica.png" alt="">
-                  <label for="costarica">   Costa Rica
-                    <input type="text" name="costarica" value="">
+                  <img class="img-izq" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/colombia.png" alt="">
+                  <label for="colombia"> Colombia
+                    <input type="text" name="colombia" value="">
                   </label>
                 </div>
                 <p>VS</p>
               <div class="equipo">
-                <img class="img-der" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/serbia.png" alt="">
-                <label for="serbia"> Serbia
-                  <input type="text" name="serbia" value="">
+                <img class="img-der" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/japon.png" alt="">
+                <label for="japon">Japón
+                  <input type="text" name="japon" value="">
+                </label>
+              </div>
+              </div>
+                          
+              <div class="caja">
+                <div class="equipo">
+                  <img class="img-izq" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/polonia.png" alt="">
+                  <label for="polonia"> Polonia
+                    <input type="text" name="polonia" value="">
+                  </label>
+                </div>
+                <p>VS</p>
+              <div class="equipo">
+                <img class="img-der" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/senegal.png" alt="">
+                <label for="senegal"> Senegal
+                  <input type="text" name="senegal" value="">
                 </label>
               </div>
               </div>
               <div class="caja">
                 <div class="equipo">
-                  <img class="img-izq" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/brasil.png" alt="">
-                  <label for="brasil"> Brasil
-                    <input type="text" name="brasil" value="">
+                  <img class="img-izq" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/rusia.png" alt="">
+                  <label for="rusia">   Rusia
+                    <input type="text" name="rusia" value="">
                   </label>
                 </div>
                 <p>VS</p>
               <div class="equipo">
-                <img class="img-der" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/suiza.png" alt="">
-                <label for="suiza">Suiza <br>
-                  <input type="text" name="suiza" value="">
-                </label>
-              </div>
-              </div>
-              <div class="caja">
-                <div class="equipo">
-                  <img class="img-izq" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/alemania.png" alt="">
-                  <label for="alemania"> Alemania
-                    <input type="text" name="alemania" value="">
-                  </label>
-                </div>
-                <p>VS</p>
-              <div class="equipo">
-                <img class="img-der" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/mexico.png" alt="">
-                <label for="mexico"> Mexico
-                  <input type="text" name="mexico" value="">
+                <img class="img-der" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/egipto.png" alt="">
+                <label for="egipto"> Egipto
+                  <input type="text" name="egipto" value="">
                 </label>
               </div>
               </div>
@@ -1284,63 +1285,69 @@
             </thead>
             <tbody>
               <td>1</td>
-              <td>MILENA PARRADO</td>
-              <td>14</td>
+              <td>ALLISON RODRIGUEZ MOLINA</td>
+              <td>31</td>
             </tbody>
             <tbody>
               <td>2</td>
-              <td>ALLISON RODRIGUEZ MOLINA</td>
-              <td>11</td>
+              <td>RAFAEL ANTONIO DIAZ</td>
+              <td>29</td>
             </tbody>
+
             <tbody>
               <td>3</td>
-              <td>RAFAEL GONZALEZ</td>
-              <td>11</td>
+              <td>KAREN JOHANA DIAZ</td>
+              <td>29</td>
             </tbody>
             <tbody>
               <td>4</td>
-              <td>RAFAEL ANTONIO DIAZ</td>
-              <td>9</td>
+              <td>CARLINA GONZALEZ DE DIAZ </td>
+              <td>29</td>
             </tbody>
             <tbody>
               <td>5</td>
-              <td>MANUEL IGNACIO DIAZ</td>
-              <td>9</td>
+              <td>MILENA PARRADO </td>
+              <td>28</td>
             </tbody>
             <tbody>
               <td>6</td>
-              <td>SAMUEL DORADO</td>
-              <td>8</td>
+              <td>SAMUEL DORADO </td>
+              <td>28</td>
             </tbody>
             <tbody>
               <td>7</td>
-              <td>CARLINA GONZALEZ DE DIAZ</td>
-              <td>6</td>
+              <td>RAFAEL GONZALEZ</td>
+              <td>23</td>
             </tbody>
             <tbody>
               <td>8</td>
-              <td>MANUEL DAVID DIAZ</td>
-              <td>6</td>
+              <td>SARA DORADO </td>
+              <td>23</td>
             </tbody>
             <tbody>
               <td>9</td>
-              <td>KAREN JOHANA DIAZ</td>
-              <td>6</td>
+              <td>CATALINA DIAZ RODRIGUEZ </td>
+              <td>23</td>
             </tbody>
             <tbody>
               <td>10</td>
-              <td>CATALINA DIAZ RODRIGUEZ</td>
-              <td>3</td>
+              <td>MANUEL DAVID DIAZ</td>
+              <td>23</td>
             </tbody>
             <tbody>
               <td>11</td>
-              <td>SARA DORADO</td>
-              <td>3</td>
+              <td>MANUEL IGNACIO DIAZ</td>
+              <td>21</td>
             </tbody>
             <tbody>
               <td>12</td>
               <td>ADRIANA PARRADO</td>
-              <td>3</td>
+              <td>12</td>
+            </tbody>
+            <tbody>
+              <td>13</td>
+              <td>ANDRES DORADO</td>
+              <td>11</td>
             </tbody>
           </table>
         </div>
@@ -1495,81 +1502,71 @@
                 <td>16-jun</td>
                 <td>2:00 P.m.</td>
                 <td>D</td>
-                <td></td>
+                <td>2</td>
                 <td>CROACIA</td>
                 <td>vs</td>
                 <td>NIGERIA</td>
-                <td></td>
+                <td>0</td>
               </tbody>
               <tbody>
                 <td>17-jun</td>
                 <td>7:00 a.m.</td>
                 <td>E</td>
-                <td></td>
+                <td>0</td>
                 <td>COSTA RICA</td>
                 <td>vs</td>
                 <td>SERBIA</td>
-                <td></td>
+                <td>1</td>
               </tbody>
               <tbody>
                 <td>17-jun</td>
                 <td>1:00 p.m.</td>
                 <td>E</td>
-                <td></td>
+                <td>1</td>
                 <td>BRASIL</td>
                 <td>vs</td>
                 <td>SUIZA</td>
-                <td></td>
+                <td>1</td>
               </tbody>
               <tbody>
                 <td>17-jun</td>
                 <td>10:00 a.m.</td>
                 <td>F</td>
-                <td></td>
+                <td>0</td>
                 <td>ALEMANIA</td>
                 <td>vs</td>
                 <td>MEXICO</td>
-                <td></td>
+                <td>1</td>
               </tbody>
               <tbody>
                 <td>18-jun</td>
                 <td>7:00 a.m.</td>
                 <td>F</td>
-                <td></td>
+                <td>1</td>
                 <td>SUECIA</td>
                 <td>vs</td>
                 <td>C. DEL SUR</td>
-                <td></td>
+                <td>0</td>
               </tbody>
               <tbody>
                 <td>18-jun</td>
                 <td>10:00 a.m.</td>
                 <td>G</td>
-                <td></td>
+                <td>3</td>
                 <td>BÉLGICA</td>
                 <td>vs</td>
                 <td>PANAMÁ</td>
-                <td></td>
+                <td>0</td>
               </tbody>
               <tbody>
                 <td>18-jun</td>
                 <td>1:00 p.m.</td>
                 <td>G</td>
-                <td></td>
+                <td>1</td>
                 <td>TUNEZ</td>
                 <td>vs</td>
                 <td>INGLATERRA</td>
-                <td></td>
-              </tbody>
-              <tbody>
-                <td>19-jun</td>
-                <td>1:00 p.m.</td>
-                <td>A</td>
-                <td></td>
-                <td>RUSIA</td>
-                <td>vs</td>
-                <td>EGIPTO</td>
-                <td></td>
+                <td>2</td>
               </tbody>
               <tbody>
                 <td>19-jun</td>
@@ -1592,6 +1589,16 @@
                 <td></td>
               </tbody>
               <tbody>
+                <td>19-jun</td>
+                <td>1:00 p.m.</td>
+                <td>A</td>
+                <td></td>
+                <td>RUSIA</td>
+                <td>vs</td>
+                <td>EGIPTO</td>
+                <td></td>
+              </tbody>
+               <tbody>
                 <td>20-jun</td>
                 <td>10:00 a.m.</td>
                 <td>A</td>
