actualizado miercoles 20 de junio y se agrega ranking

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section class="match" id="match">  <!-- formulario de matach -->
       <div class="transparencia">
         <div class="contenedor">
-          <h2>PARTIDOS MARTES 19 DE JUNIO</h2>
+          <h2>PARTIDOS MIERCOLES 20 DE JUNIO</h2>
           <div class="formulario">
             <form class="" action="send_form_email_x2.php" method="post">
               <div class="nombre">
@@ -53,47 +53,47 @@
               </div>
               <div class="caja">
                 <div class="equipo">
-                  <img class="img-izq" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/colombia.png" alt="">
-                  <label for="colombia"> Colombia
-                    <input type="text" name="colombia" value="">
+                  <img class="img-izq" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/uruguay.png" alt="">
+                  <label for="uruguay"> Uruguay
+                    <input type="text" name="uruguay" value="">
                   </label>
                 </div>
                 <p>VS</p>
               <div class="equipo">
-                <img class="img-der" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/japon.png" alt="">
-                <label for="japon">Japón
-                  <input type="text" name="japon" value="">
+                <img class="img-der" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/arabia-saudita.png" alt="">
+                <label for="asaudita">A. Saudita
+                  <input type="text" name="asaudita" value="">
                 </label>
               </div>
               </div>
                           
               <div class="caja">
                 <div class="equipo">
-                  <img class="img-izq" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/polonia.png" alt="">
-                  <label for="polonia"> Polonia
-                    <input type="text" name="polonia" value="">
+                  <img class="img-izq" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/portugal.png" alt="">
+                  <label for="portugal">Portugal
+                    <input type="text" name="portugal" value="">
                   </label>
                 </div>
                 <p>VS</p>
               <div class="equipo">
-                <img class="img-der" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/senegal.png" alt="">
-                <label for="senegal"> Senegal
-                  <input type="text" name="senegal" value="">
+                <img class="img-der" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/marruecos.png" alt="">
+                <label for="marruecos">Marruecos
+                  <input type="text" name="marruecos" value="">
                 </label>
               </div>
               </div>
               <div class="caja">
                 <div class="equipo">
-                  <img class="img-izq" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/rusia.png" alt="">
-                  <label for="rusia">   Rusia
-                    <input type="text" name="rusia" value="">
+                  <img class="img-izq" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/iran.png" alt="">
+                  <label for="iran">   Iran
+                    <input type="text" name="iran" value="">
                   </label>
                 </div>
                 <p>VS</p>
               <div class="equipo">
-                <img class="img-der" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/egipto.png" alt="">
-                <label for="egipto"> Egipto
-                  <input type="text" name="egipto" value="">
+                <img class="img-der" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/españa.png" alt="">
+                <label for="españa"> España
+                  <input type="text" name="españa" value="">
                 </label>
               </div>
               </div>
@@ -1286,68 +1286,68 @@
             <tbody>
               <td>1</td>
               <td>ALLISON RODRIGUEZ MOLINA</td>
-              <td>31</td>
+              <td>39</td>
             </tbody>
             <tbody>
               <td>2</td>
-              <td>RAFAEL ANTONIO DIAZ</td>
-              <td>29</td>
+              <td>SARA DORADO</td>
+              <td>34</td>
             </tbody>
 
             <tbody>
               <td>3</td>
-              <td>KAREN JOHANA DIAZ</td>
-              <td>29</td>
+              <td>RAFAEL ANTONIO DIAZ </td>
+              <td>32</td>
             </tbody>
             <tbody>
               <td>4</td>
-              <td>CARLINA GONZALEZ DE DIAZ </td>
-              <td>29</td>
+              <td>KAREN JOHANA DIAZ </td>
+              <td>32</td>
             </tbody>
             <tbody>
               <td>5</td>
-              <td>MILENA PARRADO </td>
-              <td>28</td>
+              <td>CARLINA GONZALEZ DE DIAZ</td>
+              <td>32</td>
             </tbody>
             <tbody>
               <td>6</td>
-              <td>SAMUEL DORADO </td>
-              <td>28</td>
+              <td>RAFAEL GONZALEZ </td>
+              <td>32</td>
             </tbody>
             <tbody>
               <td>7</td>
-              <td>RAFAEL GONZALEZ</td>
-              <td>23</td>
+              <td>MILENA PARRADO</td>
+              <td>31</td>
             </tbody>
             <tbody>
               <td>8</td>
-              <td>SARA DORADO </td>
-              <td>23</td>
+              <td>SAMUEL DORADO</td>
+              <td>31</td>
             </tbody>
             <tbody>
               <td>9</td>
               <td>CATALINA DIAZ RODRIGUEZ </td>
-              <td>23</td>
+              <td>26</td>
             </tbody>
             <tbody>
               <td>10</td>
               <td>MANUEL DAVID DIAZ</td>
-              <td>23</td>
+              <td>26</td>
             </tbody>
             <tbody>
               <td>11</td>
               <td>MANUEL IGNACIO DIAZ</td>
-              <td>21</td>
+              <td>24</td>
             </tbody>
             <tbody>
               <td>12</td>
-              <td>ADRIANA PARRADO</td>
-              <td>12</td>
+              <td>ANDRES DORADO</td>
+              <td>17</td>
             </tbody>
             <tbody>
               <td>13</td>
-              <td>ANDRES DORADO</td>
-              <td>11</td>
+              <td>ADRIANA PARRADO</td>
+              <td>15</td>
             </tbody>
           </table>
         </div>
@@ -1572,31 +1572,31 @@
                 <td>19-jun</td>
                 <td>7:00 a.m.</td>
                 <td>H</td>
-                <td></td>
+                <td>1</td>
                 <td>COLOMBIA</td>
                 <td>vs</td>
                 <td>JAPÓN</td>
-                <td></td>
+                <td>2</td>
               </tbody>
               <tbody>
                 <td>19-jun</td>
                 <td>10:00 a.m.</td>
                 <td>H</td>
-                <td></td>
+                <td>1</td>
                 <td>POLONIA</td>
                 <td>vs</td>
                 <td>SENEGAL</td>
-                <td></td>
+                <td>2</td>
               </tbody>
               <tbody>
                 <td>19-jun</td>
                 <td>1:00 p.m.</td>
                 <td>A</td>
-                <td></td>
+                <td>3</td>
                 <td>RUSIA</td>
                 <td>vs</td>
                 <td>EGIPTO</td>
-                <td></td>
+                <td>1</td>
               </tbody>
                <tbody>
                 <td>20-jun</td>
