--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section class="match" id="match">  <!-- formulario de matach -->
       <div class="transparencia">
         <div class="contenedor">
-          <h2>PARTIDOS MARTES 19 DE JUNIO</h2>
+          <h2>PARTIDOS MIERCOLES 20 DE JUNIO</h2>
           <div class="formulario">
             <form class="" action="send_form_email_x2.php" method="post">
               <div class="nombre">
@@ -53,47 +53,47 @@
               </div>
               <div class="caja">
                 <div class="equipo">
-                  <img class="img-izq" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/colombia.png" alt="">
-                  <label for="colombia"> Colombia
-                    <input type="text" name="colombia" value="">
+                  <img class="img-izq" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/uruguay.png" alt="">
+                  <label for="uruguay"> Uruguay
+                    <input type="text" name="uruguay" value="">
                   </label>
                 </div>
                 <p>VS</p>
               <div class="equipo">
-                <img class="img-der" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/japon.png" alt="">
-                <label for="japon">Japón
-                  <input type="text" name="japon" value="">
+                <img class="img-der" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/arabia-saudita.png" alt="">
+                <label for="asaudita">A. Saudita
+                  <input type="text" name="asaudita" value="">
                 </label>
               </div>
               </div>
                           
               <div class="caja">
                 <div class="equipo">
-                  <img class="img-izq" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/polonia.png" alt="">
-                  <label for="polonia"> Polonia
-                    <input type="text" name="polonia" value="">
+                  <img class="img-izq" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/portugal.png" alt="">
+                  <label for="portugal">Portugal
+                    <input type="text" name="portugal" value="">
                   </label>
                 </div>
                 <p>VS</p>
               <div class="equipo">
-                <img class="img-der" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/senegal.png" alt="">
-                <label for="senegal"> Senegal
-                  <input type="text" name="senegal" value="">
+                <img class="img-der" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/marruecos.png" alt="">
+                <label for="marruecos">Marruecos
+                  <input type="text" name="marruecos" value="">
                 </label>
               </div>
               </div>
               <div class="caja">
                 <div class="equipo">
-                  <img class="img-izq" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/rusia.png" alt="">
-                  <label for="rusia">   Rusia
-                    <input type="text" name="rusia" value="">
+                  <img class="img-izq" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/iran.png" alt="">
+                  <label for="iran">   Iran
+                    <input type="text" name="iran" value="">
                   </label>
                 </div>
                 <p>VS</p>
               <div class="equipo">
-                <img class="img-der" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/egipto.png" alt="">
-                <label for="egipto"> Egipto
-                  <input type="text" name="egipto" value="">
+                <img class="img-der" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="images/españa.png" alt="">
+                <label for="españa"> España
+                  <input type="text" name="españa" value="">
                 </label>
               </div>
               </div>
